fix: octo z-index bug

--- a/components/style/project.module.scss
+++ b/components/style/project.module.scss
@@ -44,7 +44,7 @@
       margin-bottom: $mn/2;
     }
     .fast {
-      z-index: 200;
+      z-index: 2;
     }
   }
   .info {
